improved inline pagination minor fixes of vertical-align

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -862,8 +862,9 @@ blockquote{border-left:3px solid #dbd8ba;border-radius:3px;padding:10px;margin:0
 .navbar-inner{border-radius:0;}
 .category h1{font-size:1.2em;font-weight:400;border-radius:5px;}
 th.forum-topic-count,th.forum-post-count,th.topic-post-count,th.topic-view-count{text-align:center;}
+.forum-row td,.topic-row td{line-height:16px;}
 td.forum-topic-count,td.forum-post-count,td.topic-post-count,td.topic-view-count{font-size:.8em;text-align:center;width:10%;}
-td.topic-post-count,td.topic-view-count{vertical-align:middle;}
+td.forum-topic-count,td.forum-post-count,td.forum-last-post,td.topic-post-count,td.topic-view-count,td.topic-last-post{vertical-align:middle;}
 td.forum-last-post,td.topic-last-post{font-size:.8em;width:25%;}
 .forum h1{font-size:1.3em;font-weight:400;border-radius:5px;}
 .forum-description{font-size:.8em;}
@@ -877,6 +878,7 @@ td.forum-last-post,td.topic-last-post{font-size:.8em;width:25%;}
 .block .header{font-weight:bold;border-radius:4px 4px 0 0;line-height:1.5em;margin:-10px -10px 10px;padding:10px;}
 .block .info{border-radius:0 0 4px 4px;margin:20px -10px -10px -10px;padding:10px;}
 .pagination{text-align:center;}
+.inline-pagination{display:inline-block;margin:0;vertical-align:middle;}
 .footer{padding:30px 10px;margin:0 0 30px 0;}
 label.checkbox ul,label.radio ul{list-style:none;}
 .poll-answer-form .control-group{display:inline-block;width:400px;}
